--- a/Css/styles.css
+++ b/Css/styles.css
@@ -31,45 +31,54 @@ h1 {
 
 .box1 {
     border-style: solid;
-    border-width: 0rem 0.5rem 0.5rem 0rem; 
+    border-width: 0rem 0.5rem 0.5rem 0rem;
+    cursor: pointer; 
 }
 
 .box2 {
     border-style: solid;
-    border-width: 0rem 0.5rem 0.5rem 0.5rem; 
+    border-width: 0rem 0.5rem 0.5rem 0.5rem;
+    cursor: pointer; 
 }
 
 .box3 {
     border-style: solid;
-    border-width: 0rem 0rem 0.5rem 0.5rem; 
+    border-width: 0rem 0rem 0.5rem 0.5rem;
+    cursor: pointer; 
 }
 
 .box4 {
     border-style: solid;
-    border-width: 0.5rem 0.5rem 0.5rem 0rem; 
+    border-width: 0.5rem 0.5rem 0.5rem 0rem;
+    cursor: pointer; 
 }
 
 .box5 {
     border-style: solid;
-    border-width: 0.5rem 0.5rem 0.5rem 0.5rem; 
+    border-width: 0.5rem 0.5rem 0.5rem 0.5rem;
+    cursor: pointer; 
 }
 
 .box6 {
     border-style: solid;
-    border-width: 0.5rem 0rem 0.5rem 0.5rem; 
+    border-width: 0.5rem 0rem 0.5rem 0.5rem;
+    cursor: pointer; 
 }
 
 .box7 {
     border-style: solid;
-    border-width: 0.5rem 0.5rem 0rem 0rem; 
+    border-width: 0.5rem 0.5rem 0rem 0rem;
+    cursor: pointer; 
 }
 
 .box8 {
     border-style: solid;
-    border-width: 0.5rem 0.5rem 0rem 0.5rem; 
+    border-width: 0.5rem 0.5rem 0rem 0.5rem;
+    cursor: pointer; 
 }
 
 .box9 {
     border-style: solid;
-    border-width: 0.5rem 0rem 0rem 0.5rem; 
+    border-width: 0.5rem 0rem 0rem 0.5rem;
+    cursor: pointer; 
 }
