--- a/Css/styles.css
+++ b/Css/styles.css
@@ -18,7 +18,7 @@ h1 {
 }
 
 .gameBoard {
-    width: 40%;
+    width: 50%;
     margin: 10rem auto;
     display: flex;
     flex-wrap: wrap;
@@ -30,59 +30,60 @@ h1 {
     pointer-events: none;
 }
 
+
 /*box border styles */
 
 
 .box1 {
     border-style: solid;
-    border-width: 0rem 0.5rem 0.5rem 0rem;
+    border-width: 0rem 1vw 01vw 0rem;
     cursor: pointer; 
 }
 
 .box2 {
     border-style: solid;
-    border-width: 0rem 0.5rem 0.5rem 0.5rem;
+    border-width: 0rem 1vw 1vw 1vw;
     cursor: pointer; 
 }
 
 .box3 {
     border-style: solid;
-    border-width: 0rem 0rem 0.5rem 0.5rem;
+    border-width: 0rem 0rem 1vw 1vw;
     cursor: pointer; 
 }
 
 .box4 {
     border-style: solid;
-    border-width: 0.5rem 0.5rem 0.5rem 0rem;
+    border-width: 1vw 1vw 1vw 0rem;
     cursor: pointer; 
 }
 
 .box5 {
     border-style: solid;
-    border-width: 0.5rem 0.5rem 0.5rem 0.5rem;
+    border-width: 1vw 1vw 1vw 1vw;
     cursor: pointer; 
 }
 
 .box6 {
     border-style: solid;
-    border-width: 0.5rem 0rem 0.5rem 0.5rem;
+    border-width: 1vw 0rem 1vw 1vw;
     cursor: pointer; 
 }
 
 .box7 {
     border-style: solid;
-    border-width: 0.5rem 0.5rem 0rem 0rem;
+    border-width: 1vw 1vw 0rem 0rem;
     cursor: pointer; 
 }
 
 .box8 {
     border-style: solid;
-    border-width: 0.5rem 0.5rem 0rem 0.5rem;
+    border-width: 1vw 1vw 0rem 1vw;
     cursor: pointer; 
 }
 
 .box9 {
     border-style: solid;
-    border-width: 0.5rem 0rem 0rem 0.5rem;
+    border-width: 1vw 0rem 0rem 1vw;
     cursor: pointer; 
 }
