--- a/Css/styles.css
+++ b/Css/styles.css
@@ -43,6 +43,19 @@ h1 {
     font-size: 2em;
 }
 
+.reset {
+    background-color: darkgray;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: .25rem;
+    box-shadow: rgba(0, 0, 0, 1) 0 1px 3px 0;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 10px;
+    text-decoration: none;
+    transition: all 250ms;
+    width: auto;
+}
 /*box border styles */
 
 
