Updated gameplay functionality

--- a/Css/styles.css
+++ b/Css/styles.css
@@ -1,15 +1,16 @@
 p {
     margin: 0;
     padding: 0;
-    width: 12vw;
-    height: 12vw;
+    width: 7vw;
+    height: 7vw;
     text-align: center;
-    font-size: 12vw;
+    font-size: 7vw;
     border: solid black 1px;
 }
 
 body{
     background-color: rgb(44, 48, 44);
+    text-align: center;
 }
 
 h1 {
@@ -18,7 +19,8 @@ h1 {
 }
 
 .gameBoard {
-    width: 50%;
+    min-width: 100px;
+    width: 25vw;
     margin: 2rem auto;
     display: flex;
     flex-wrap: wrap;
@@ -43,7 +45,7 @@ h1 {
     font-size: 2em;
 }
 
-.reset {
+.resetButton {
     background-color: darkgray;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: .25rem;
@@ -55,60 +57,70 @@ h1 {
     text-decoration: none;
     transition: all 250ms;
     width: auto;
+    margin-top: 30px;
 }
 /*box border styles */
 
 
-.box1 {
+#box1 {
     border-style: solid;
-    border-width: 0rem 1vw 01vw 0rem;
-    cursor: pointer; 
+    border-width: 0rem 4px 4px 0rem;
+    cursor: pointer;
+    transition: all 200ms; 
 }
 
-.box2 {
+#box2 {
     border-style: solid;
-    border-width: 0rem 1vw 1vw 1vw;
-    cursor: pointer; 
+    border-width: 0rem 4px 4px 4px;
+    cursor: pointer;
+    transition: all 200ms; 
 }
 
-.box3 {
+#box3 {
     border-style: solid;
-    border-width: 0rem 0rem 1vw 1vw;
-    cursor: pointer; 
+    border-width: 0rem 0rem 4px 4px;
+    cursor: pointer;
+    transition: all 200ms; 
 }
 
-.box4 {
+#box4 {
     border-style: solid;
-    border-width: 1vw 1vw 1vw 0rem;
-    cursor: pointer; 
+    border-width: 4px 4px 4px 0rem;
+    cursor: pointer;
+    transition: all 200ms; 
 }
 
-.box5 {
+#box5 {
     border-style: solid;
-    border-width: 1vw 1vw 1vw 1vw;
-    cursor: pointer; 
+    border-width: 4px 4px 4px 4px;
+    cursor: pointer;
+    transition: all 200ms; 
 }
 
-.box6 {
+#box6 {
     border-style: solid;
-    border-width: 1vw 0rem 1vw 1vw;
-    cursor: pointer; 
+    border-width: 4px 0rem 4px 4px;
+    cursor: pointer;
+    transition: all 200ms; 
 }
 
-.box7 {
+#box7 {
     border-style: solid;
-    border-width: 1vw 1vw 0rem 0rem;
-    cursor: pointer; 
+    border-width: 4px 4px 0rem 0rem;
+    cursor: pointer;
+    transition: all 200ms; 
 }
 
-.box8 {
+#box8 {
     border-style: solid;
-    border-width: 1vw 1vw 0rem 1vw;
-    cursor: pointer; 
+    border-width: 4px 4px 0rem 4px;
+    cursor: pointer;
+    transition: all 200ms; 
 }
 
-.box9 {
+#box9 {
     border-style: solid;
-    border-width: 1vw 0rem 0rem 1vw;
-    cursor: pointer; 
+    border-width: 4px 0rem 0rem 4px;
+    cursor: pointer;
+    transition: all 200ms; 
 }
